--- a/big_o_notation.ipynb
+++ b/big_o_notation.ipynb
@@ -86,7 +86,7 @@
     "plt.ylabel('Operations', fontsize=16)\n",
     "\n",
     "# O(1)\n",
-    "plt.plot(x, y1, label = '$O(1)$',  c = '#444444')\n",
+    "plt.plot(x, y1, label = '$\\mathcal{O}O(1)$',  c = '#444444')\n",
     "\n",
     "# O(log n)\n",
     "plt.plot(x, y2, label='$\\mathcal{O}(logn)$',c = 'r')\n",
