--- a/dataframes.ipynb
+++ b/dataframes.ipynb
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
        "pandas.core.frame.DataFrame"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4436,10 +4436,706 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Mammals = data('Mammals')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mammals\n",
+      "\n",
+      "PyDataset Documentation (adopted from R Documentation. The displayed examples are in R)\n",
+      "\n",
+      "## Garland(1983) Data on Running Speed of Mammals\n",
+      "\n",
+      "### Description\n",
+      "\n",
+      "Observations on the maximal running speed of mammal species and their body\n",
+      "mass.\n",
+      "\n",
+      "### Usage\n",
+      "\n",
+      "    data(Mammals)\n",
+      "\n",
+      "### Format\n",
+      "\n",
+      "A data frame with 107 observations on the following 4 variables.\n",
+      "\n",
+      "weight\n",
+      "\n",
+      "Body mass in Kg for \"typical adult sizes\"\n",
+      "\n",
+      "speed\n",
+      "\n",
+      "Maximal running speed (fastest sprint velocity on record)\n",
+      "\n",
+      "hoppers\n",
+      "\n",
+      "logical variable indicating animals that ambulate by hopping, e.g. kangaroos\n",
+      "\n",
+      "specials\n",
+      "\n",
+      "logical variable indicating special animals with \"lifestyles in which speed\n",
+      "does not figure as an important factor\": Hippopotamus, raccoon (Procyon),\n",
+      "badger (Meles), coati (Nasua), skunk (Mephitis), man (Homo), porcupine\n",
+      "(Erithizon), oppossum (didelphis), and sloth (Bradypus)\n",
+      "\n",
+      "### Details\n",
+      "\n",
+      "Used by Chappell (1989) and Koenker, Ng and Portnoy (1994) to illustrate the\n",
+      "fitting of piecewise linear curves.\n",
+      "\n",
+      "### Source\n",
+      "\n",
+      "Garland, T. (1983) The relation between maximal running speed and body mass in\n",
+      "terrestrial mammals, _J. Zoology_, 199, 1557-1570.\n",
+      "\n",
+      "### References\n",
+      "\n",
+      "Koenker, R., P. Ng and S. Portnoy, (1994) Quantile Smoothing Splines”\n",
+      "_Biometrika_, 81, 673-680.\n",
+      "\n",
+      "Chappell, R. (1989) Fitting Bent Lines to Data, with Applications ot\n",
+      "Allometry, _J. Theo. Biology_, 138, 235-256.\n",
+      "\n",
+      "### See Also\n",
+      "\n",
+      "`rqss`\n",
+      "\n",
+      "### Examples\n",
+      "\n",
+      "    data(Mammals)\n",
+      "    attach(Mammals)\n",
+      "    x <- log(weight)\n",
+      "    y <- log(speed)\n",
+      "    plot(x,y, xlab=\"Weight in log(Kg)\", ylab=\"Speed in log(Km/hour)\",type=\"n\")\n",
+      "    points(x[hoppers],y[hoppers],pch = \"h\", col=\"red\")\n",
+      "    points(x[specials],y[specials],pch = \"s\", col=\"blue\")\n",
+      "    others <- (!hoppers & !specials)\n",
+      "    points(x[others],y[others], col=\"black\",cex = .75)\n",
+      "    fit <- rqss(y ~ qss(x, lambda = 1),tau = .9)\n",
+      "    plot(fit)\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# to view documentation\n",
+    "data('Mammals', show_doc=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## How many rows and columns are there?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(107, 4)"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Mammals.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## What are the data types?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "weight      float64\n",
+       "speed       float64\n",
+       "hoppers        bool\n",
+       "specials       bool\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Mammals.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>weight</th>\n",
+       "      <th>speed</th>\n",
+       "      <th>hoppers</th>\n",
+       "      <th>specials</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>83</th>\n",
+       "      <td>0.050</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>84</th>\n",
+       "      <td>0.045</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85</th>\n",
+       "      <td>0.035</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>86</th>\n",
+       "      <td>0.035</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>87</th>\n",
+       "      <td>0.030</td>\n",
+       "      <td>6.8</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>88</th>\n",
+       "      <td>0.030</td>\n",
+       "      <td>9.1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>89</th>\n",
+       "      <td>0.025</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>90</th>\n",
+       "      <td>0.025</td>\n",
+       "      <td>8.6</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>91</th>\n",
+       "      <td>0.018</td>\n",
+       "      <td>8.9</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>92</th>\n",
+       "      <td>0.016</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>93</th>\n",
+       "      <td>0.100</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>94</th>\n",
+       "      <td>0.100</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>0.016</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>4.600</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>4.400</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>4.000</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>3.500</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100</th>\n",
+       "      <td>2.000</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101</th>\n",
+       "      <td>1.900</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>102</th>\n",
+       "      <td>1.500</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>103</th>\n",
+       "      <td>1.500</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>104</th>\n",
+       "      <td>50.000</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>105</th>\n",
+       "      <td>5.000</td>\n",
+       "      <td>7.4</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>106</th>\n",
+       "      <td>0.024</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>107</th>\n",
+       "      <td>4.000</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     weight  speed  hoppers  specials\n",
+       "83    0.050   11.0    False     False\n",
+       "84    0.045   16.0    False     False\n",
+       "85    0.035   32.0     True     False\n",
+       "86    0.035   14.0     True     False\n",
+       "87    0.030    6.8    False     False\n",
+       "88    0.030    9.1    False     False\n",
+       "89    0.025   11.0    False     False\n",
+       "90    0.025    8.6    False     False\n",
+       "91    0.018    8.9    False     False\n",
+       "92    0.016   13.0    False     False\n",
+       "93    0.100    4.0    False     False\n",
+       "94    0.100    2.4    False     False\n",
+       "95    0.016    3.6    False     False\n",
+       "96    4.600   64.0     True     False\n",
+       "97    4.400   72.0     True     False\n",
+       "98    4.000   72.0     True     False\n",
+       "99    3.500   56.0     True     False\n",
+       "100   2.000   64.0     True     False\n",
+       "101   1.900   56.0     True     False\n",
+       "102   1.500   50.0     True     False\n",
+       "103   1.500   40.0     True     False\n",
+       "104  50.000   65.0    False     False\n",
+       "105   5.000    7.4    False      True\n",
+       "106   0.024   13.0    False     False\n",
+       "107   4.000    1.6    False      True"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Mammals.tail(25)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summarize the dataframe with .info and .describe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 107 entries, 1 to 107\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column    Non-Null Count  Dtype  \n",
+      "---  ------    --------------  -----  \n",
+      " 0   weight    107 non-null    float64\n",
+      " 1   speed     107 non-null    float64\n",
+      " 2   hoppers   107 non-null    bool   \n",
+      " 3   specials  107 non-null    bool   \n",
+      "dtypes: bool(2), float64(2)\n",
+      "memory usage: 2.7 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "Mammals.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>weight</th>\n",
+       "      <th>speed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>107.000000</td>\n",
+       "      <td>107.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>278.688178</td>\n",
+       "      <td>46.208411</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>839.608269</td>\n",
+       "      <td>26.716778</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.016000</td>\n",
+       "      <td>1.600000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>1.700000</td>\n",
+       "      <td>22.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>34.000000</td>\n",
+       "      <td>48.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>142.500000</td>\n",
+       "      <td>65.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>6000.000000</td>\n",
+       "      <td>110.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            weight       speed\n",
+       "count   107.000000  107.000000\n",
+       "mean    278.688178   46.208411\n",
+       "std     839.608269   26.716778\n",
+       "min       0.016000    1.600000\n",
+       "25%       1.700000   22.500000\n",
+       "50%      34.000000   48.000000\n",
+       "75%     142.500000   65.000000\n",
+       "max    6000.000000  110.000000"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Mammals.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## What is the the weight of the fastest animal?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "53    55.0\n",
+       "Name: weight, dtype: float64"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Mammals.weight[Mammals.speed == Mammals.speed.max()]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## What is the overal percentage of specials?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(Mammals.specials[Mammals.specials == True])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "107"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(Mammals)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9.345794392523365"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(Mammals.specials[Mammals.specials == True]) / len(Mammals) * 100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## How many animals are hoppers that are above the median speed? What percentage is this?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(Mammals.hoppers[Mammals.hoppers == True])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(Mammals[(Mammals.speed > Mammals.speed.median()) & (Mammals.hoppers == True)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.5420560747663545"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# percentage of mammals that are hoppers above the median speed\n",
+    "\n",
+    "len(Mammals[(Mammals.speed > Mammals.speed.median()) & (Mammals.hoppers == True)]) / len(Mammals) * 100"
+   ]
   }
  ],
  "metadata": {
