--- a/advanced_dataframes.ipynb
+++ b/advanced_dataframes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -903,7 +903,7 @@
        "99   10009   82507  1996-02-16  1997-02-15"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -923,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -932,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -949,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -967,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -976,7 +976,7 @@
        "pandas.core.frame.DataFrame"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -988,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1142,7 +1142,7 @@
        "[300024 rows x 6 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1153,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1283,7 +1283,7 @@
        "[443308 rows x 4 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1302,7 +1302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1311,7 +1311,7 @@
        "(443308, 4)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1322,7 +1322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1331,7 +1331,7 @@
        "(300024, 6)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1349,7 +1349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1476,7 +1476,7 @@
        "max     499999.000000       NaN         NaN         NaN"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1487,7 +1487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1563,7 +1563,7 @@
        "freq            95        295       226  179973         132"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1582,7 +1582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1592,7 +1592,7 @@
        "       'Assistant Engineer', 'Technique Leader', 'Manager'], dtype=object)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1641,64 +1641,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>emp_no</th>\n",
-       "      <th>title</th>\n",
-       "      <th>from_date</th>\n",
-       "      <th>to_date</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>10001</td>\n",
-       "      <td>Senior Engineer</td>\n",
-       "      <td>1986-06-26</td>\n",
-       "      <td>9999-01-01</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   emp_no            title   from_date     to_date\n",
-       "0   10001  Senior Engineer  1986-06-26  9999-01-01"
+       "datetime.date(9999, 1, 1)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "titles_df.sort_values(by = 'to_date', ascending=False).head(1)\n",
-    "\n",
-    "# or\n",
-    "\n",
-    "#titles_df.to_date.max()"
+    "titles_df.to_date.max()"
    ]
   },
   {
@@ -4615,7 +4573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -4795,30 +4753,21 @@
        "[4622 rows x 6 columns]"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# reads from the chipotle db\n",
-    "url_c = get_db_url(user, host, password, 'chipotle')\n",
-    "\n",
-    "# # query to select from the orders table\n",
-    "# query = '''\n",
-    "# SELECT * \n",
-    "# FROM chipotle.orders\n",
-    "# LIMIT 100\n",
-    "# '''\n",
-    "# orders_table = pd.read_sql(query,get_db_url('chipotle') )\n",
-    "\n",
     "\n",
     "chipotle_query = \"\"\"\n",
     "select *\n",
     "from chipotle.orders\n",
     "\"\"\"\n",
     "\n",
-    "orders_table = pd.read_sql(chipotle_query,url_c)\n",
+    "orders_table = pd.read_sql(chipotle_query,get_db_url(user, host, password,'chipotle'))\n",
+    "\n",
     "orders_table"
    ]
   },
